ecmascript/parser/tests/test262-error-references/fail/ca3dd7ea0b4626dd.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/ca3dd7ea0b4626dd.js:1:23
  |
1 | console.log(typeof () => {});
  |                       ^^

